[Feature]: Fixed UI so Get Started button would be visible on mobile

--- a/client/src/Components/SoundWave.css
+++ b/client/src/Components/SoundWave.css
@@ -11,7 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 75px 0px 75px 0px;
+    margin: 40px 0px 50px 0px;
 }
 
 .bar{
