--- a/client/src/Routes/Entry.css
+++ b/client/src/Routes/Entry.css
@@ -8,22 +8,16 @@
     padding-bottom: 60px;
 }
 
-.heroSection{
-    min-height: calc(100vh - 120px);
-}
-
 .summaryWrapper{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding-top: 25px;
     padding-bottom: 25px;
 }
 
 .appSummary{
     padding: 50px;
     padding-top: 0px;
-    margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -56,10 +50,20 @@
     .appSummary{
         align-items: flex-start;
         text-align: left;
+        margin-top: 50px;
+    }
+
+    .heroSection{
+        min-height: calc(100vh - 120px);
     }
 
     .heroBtnContainer{
+        margin-top: 30px;
         align-self: flex-end;
+    }
+
+    .summaryWrapper{
+        padding-top: 25px;
     }
 }
 
